// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clientMode custom client on browser client logs correctly 1`] = `
Array [
  "Hey.",
  "open",
  "liveReload",
  "[WDS] Live Reloading enabled.",
  "hash",
  "ok",
  "close",
  "[WDS] Disconnected!",
]
`;

exports[`clientMode sockjs on browser client logs correctly 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
  "[WDS] Disconnected!",
]
`;

exports[`clientMode ws on browser client logs correctly 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
  "[WDS] Disconnected!",
]
`;
